--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vue-cli-plugin-console-killer",
-  "version": "2.0.2",
+  "version": "2.0.3",
   "description": "vue-cli plugin to kill console like cockroach",
   "main": "index.js",
   "scripts": {
@@ -9,11 +9,13 @@
   "author": "Evan Wang",
   "license": "MIT",
   "devDependencies": {
+    
+  },
+  "dependencies": {
     "@tp953704/babel-plugin-console-killer": "^1.0.3",
     "babel-core": "^6.26.3",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-object-rest-spread": "^6.26.0"
-  },
-  "dependencies": {}
+  }
 }
